treshold varies based on tests

--- a/poc/latex/article/tesina.tex
+++ b/poc/latex/article/tesina.tex
@@ -10,20 +10,23 @@
 % false = research / review article
 % (depending on journal).
 
-\title{Simulazione di un filtro digitale per la rilevazione di segnali neurali \emph{ }}
+\title{
+Relazione finale: \emph{ Simulazione di un filtro digitale per la rilevazione di segnali neurali}}
 
-\author[1]{Alfredo Guarnieri}
-% \author[2,*]{Author Two}
-% \author[1]{Author Three}
+\author[1]{Alfredo Guarnieri, matricola 773041. Università Milano-Bicocca. Corso di laurea triennale in Fisica. \\
+Relatore: Marcello de Matteis\\
+Correlatore: Elia Arturo Vellicelli}
+%\author[2]{Relatore: Marcello De Matteis}
+%\author[3]{Correlatore: Elia Arturo Vellicelli}
 
-% \affil[1]{Publications Department, The Optical Society (OSA), 2010 Massachusetts Avenue NW, Washington D.C., 20036, USA}
+%\affil[1]{Publications Department, The Optical Society (OSA), 2010 Massachusetts Avenue NW, Washington D.C., 20036, USA}
 % \affil[2]{School of Science, University of Technology, 2000 J St. NW, Washington DC, 20036, USA}
 % \affil[3]{School of Optics, University of Technology, 2000 J St. NW, Washington DC, 20036, USA}
 
 % \affil[*]{Corresponding author: email@my-email.com}
 
 %% To be edited by editor
-% \dates{Compiled \today}
+\dates{ \today}
 
 %\ociscodes{(140.3490) Lasers, distributed feedback; (060.2420) Fibers, polarization-maintaining;(060.3735) Fiber Bragg gratings.}
 
@@ -211,7 +214,8 @@ La figura \ref{fig:c9_I5SNR4spec} mostra lo spettro del segnale di riferimento, 
 %
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=1\linewidth]{graphs/I1SNR-6spec.jpg}
+%\includegraphics[width=1\linewidth]{graphs/I1SNR-6spec.jpg}
+\includegraphics[width=2\linewidth]{graphs/spettro.jpg}
 \caption{$SNR = -6dB$. PSDs}
 \label{fig:c9_I5SNR4spec}
 \end{figure}
@@ -226,17 +230,18 @@ I seguenti grafici \ref{fig:c1_I2SNR0time} e \ref{fig:c1_I4SNR0time} mostrano la
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=1\linewidth]{results/c1_I2SNR0time.jpg}
+%\includegraphics[width=2\linewidth]{results/c1_I2SNR0time.jpg}
+\includegraphics[width=2\linewidth]{graphs/time.jpg}
 \caption{Serie temporali. Segnale e filtri. Impulso gaussiano}
 \label{fig:c1_I2SNR0time}
 \end{figure}
 
-\begin{figure}[htbp]
-\centering
-\includegraphics[width=1\linewidth]{results/c1_I4SNR0time.jpg}
-\caption{Serie temporali. Segnale e filtri. Impulso spike}
-\label{fig:c1_I4SNR0time}
-\end{figure}
+%\begin{figure}[htbp]
+%\centering
+%\includegraphics[width=1\linewidth]%{results/c1_I4SNR0time.jpg}
+%\caption{Serie temporali. Segnale e %filtri. Impulso spike}
+%\label{fig:c1_I4SNR0time}
+%\end{figure}
 
 
 
